tests/builtins/builtins.exp
array.js:3
  3: var c: string = b[0]; // error: number !~> string
                     ^^^^ number. This type is incompatible with
  3: var c: string = b[0]; // error: number !~> string
            ^^^^^^ string

array.js:8
  8:     var x:number = array[0]; // error: string !~> number
                        ^^^^^^^^ string. This type is incompatible with
  8:     var x:number = array[0]; // error: string !~> number
               ^^^^^^ number

array.js:15
 15:     var x:number = foo1.get(); // error: string !~> number
                        ^^^^^^^^^^ string. This type is incompatible with
 15:     var x:number = foo1.get(); // error: string !~> number
               ^^^^^^ number


Found 3 errors
